# agilent-ir-formats

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
agilent_ir_formats/: agilent_ir_file.py
agilentirformats/agilentirformats/: agilentmosaic.py  agilenttile.py
src/agilentirformats/: __init__.py  agilent_ir_file.py
