[tool.poetry]
name = "agilent-ir-formats"
version = "0.4.0"
description = "Agilent File Format Handling for Infrared Spectroscopy"
authors = ["Alex Henderson <alex.henderson@manchester.ac.uk>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/AlexHenderson/agilent-ir-formats"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
h5py = "^3.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
